--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="done">Done</string>
     <string name="cancel">Cancel</string>
     <string name="insert_your_zip_code">Insert your zip code</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="f_c">%.2f °C</string>
+    <string name="f_f">%.2f °F</string>
 </resources>
