--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,10 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="f_c">%.2f °C</string>
     <string name="f_f">%.2f °F</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="snack_message">Click on today\'s weather to change scale</string>
+    <string name="ok">OK</string>
+    <string name="today">TODAY</string>
 </resources>
